tests/paczka2/big_fuzzy/66286744.err
Error in line 6: CMpYrbWh A415 43,1
Error in line 17: CMpYrbWh A569 16,6
Error in line 20: A415 A415 68,7
Error in line 23: A415 A544 85,1
Error in line 24: A415 S515 95,9
Error in line 29: Q9s A415 13,84
Error in line 21: CMpYrbWh A544 19,3
Error in line 38: CMpYrbWh S515 43,9
Error in line 39: OCLC A415 86,4
Error in line 37: Q9s A415 35,1
Error in line 43: OCLC A544 75,0
Error in line 40: CMpYrbWh A544 34,6
Error in line 74: OCLC A544 21,1
Error in line 76: OCLC A569 25,2
Error in line 80: OCLC A544 70,3
Error in line 81: UPPLbpW A569 34,3
Error in line 98: a0vPO1xa S515 84,5
Error in line 101: a0vPO1xa A544 69,9
Error in line 100: Q9s A544 199,3
Error in line 97: MjG4EbgPdp A415 82,2
Error in line 117: OCLC S515 22,4
Error in line 99: A415 S515 36,1
Error in line 126: A415 A569 55,3
Error in line 133: UPPLbpW A569 46,8
Error in line 134: UPPLbpW A415 46,7
Error in line 149: Q9s A544 12,5
Error in line 155: A415 A415 81,4
Error in line 150: MjG4EbgPdp A544 150,9
Error in line 159: MjG4EbgPdp A569 70,5
Error in line 160: UPPLbpW A569 97,9
Error in line 178: UÊÊLbpW A415 6,1
Error in line 174: CMpYrbWh S515 38,3
Error in line 172: UPPLbpW A415 1,7
Error in line 182: UPPLbpW S515 35,3
Error in line 185: Q9s A415 55,4
Error in line 191: Q9s A569 19,4
Error in line 215: UPPLbpW S515 64,/
Error in line 226: A415 A415 5,3
Error in line 229: A415 A544 30,9
Error in line 225: UPPLbpW S515 399,3
Error in line 232: MjG4EbgPdp A544 61,5
Error in line 250: Q9s S515 91,26
